# NDK_OpenGL_ES3.0

./: README.md  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/devyk/ndk_opengl_es3_0/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/devyk/ndk_opengl_es3_0/: App.kt  MainActivity.kt  YUVPlayerActivity.kt
app/src/main/java/com/devyk/ndk_opengl_es3_0/sample/: OpenGL3_0_BookSample.kt
app/src/main/res/layout/: activity_main.xml  activity_yuvplayer.xml  sample_activity.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/devyk/ndk_opengl_es3_0/: ExampleUnitTest.kt
gles3_0_book_sample/: build.gradle
gles3_0_book_sample/src/androidTest/java/com/devyk/gles3_0_book_sample/: ExampleInstrumentedTest.java
gles3_0_book_sample/src/main/: AndroidManifest.xml
gles3_0_book_sample/src/main/cpp/: CMakeLists.txt
gles3_0_book_sample/src/main/cpp/chapter_2/: Hello_Triangle.c
gles3_0_book_sample/src/main/cpp/common/: esUtil.c
gles3_0_book_sample/src/main/cpp/common/android/: esUtil_Android.c
gles3_0_book_sample/src/main/cpp/common/include/: esUtil_win.h
gles3_0_book_sample/src/main/res/values/: strings.xml
gles3_0_book_sample/src/test/java/com/devyk/gles3_0_book_sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
